--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "prettier": "^2.7.1",
     "typescript": "^4.8.4",
     "vite": "^3.1.4",
     "vite-plugin-solid": "^2.3.9"
